2008-04-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* ParameterInfo.cs: Name must default to null if no ParameterBuilder
	is supplied.

2008-04-22  Zoltan Varga  <vargaz@gmail.com>

	* MonoGenericClass.cs (GetMethod): Construct a MethodOnTypeBuilderInst object
	instead of using GetCorrespondingInflatedMethod. This is needed so this class can
	reflect the changes made to the builder after initialize () has been called.
	Fixes #381547 and #354759.
	(GetConstructor): Ditto.

2008-04-16  Zoltan Varga  <vargaz@gmail.com>

	* Binder.cs: Applied patch from Yves Bastide (doc.formatique@gmail.com). Add 
	support for converting integers to enums. Fixes #380361.

﻿2008-04-02  Andreas Nahr  <ClassDevelopment@A-SoftTech.com>

	* IReflect.cs
	* MethodInfo.cs: Fix parameter names

2008-03-31  Mark Probst  <mark.probst@gmail.com>

	* MonoMethod.cs: Don't do CAS security checks in Invoke for 2.1
	profile.

2008-03-25  Zoltan Varga  <vargaz@gmail.com>

	* MonoCMethod.cs (Invoke): Avoid a crash if this is called on a ctor of an open
	generic type. Fixes #373459.
	
	* MonoMethod.cs (InternalInvoke): Add an out 'exc' argument used to distinguish
	exceptions thrown by the icall from the exceptions thrown by the wrapped method.
	Fixes #373448.

2008-03-17  Marek Safar  <marek.safar@gmail.com>

	* MonoMethod.cs (ToString): Print VarArgs argument.

2008-03-14  Zoltan Varga  <vargaz@gmail.com>

	* MonoGenericClass.cs (GetField): Construct a FieldOnTypeBuilderInst object
	instead of using GetCorrespondingInflatedField. This is needed so this class can
	reflect the changes made to the type builder after initialize () has been called.

	* Binder.cs (ChangeType): Add support for Char->Double/Single conversations. Fixes
	#367655.

2008-03-10  Gert Driesen  <drieseng@users.sourceforge.net>

	* Assembly.cs (GetFile): Fixed exception messages and param name.

2008-03-06  Zoltan Varga  <vargaz@gmail.com>

	* Assembly.cs: Define GetManifestModule () for net 2.0 bootstrap as well.
