@@ -1,3 +1,9 @@
+2008-05-05  Zoltan Varga  <vargaz@gmail.com>
+
+	* FieldInfo.cs (GetFieldFromHandle): Add an argument check for an invalid handle.
+
+	* MethodBase.cs (GetMethodFromHandle): Ditto. Fixes #386641.
+
 2008-04-30  Gert Driesen  <drieseng@users.sourceforge.net>
 
 	* ParameterInfo.cs: Name must default to null if no ParameterBuilder
